# db-backend-architecture-anava

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_admin_workflow.py  0003_doctor_clinic_id.py  0004_staff_request_fulfillment.py  0005_patient_self_registration.py  0006_fix_prs_stage_completion_trigger.py  0007_fix_rls_patient_clinic_leak.py  0008_fix_regional_admin_consent_scope.py  0009_consent_redesign.py  0010_regional_admin_clinic_binding.py  0011_fix_profile_bootstrap_lookup_rls.py  0012_fix_public_clinics_endpoint_rls.py  0013_fix_local_login_email_lookup_rls.py  0014_fix_admins_rls_regional_scope.py  0015_remove_clinic_admin_staff_request_role.py  0016_fix_consent_records_self_sign_rls.py  0017_fix_regions_rls_anonymous_read.py  0018_fix_self_registration_anonymous_insert_rls.py  0019_fix_patient_scale_assignments_self_select_rls.py  0020_fix_prs_scale_and_final_results_self_submit_rls.py  0021_fix_profiles_patient_sees_own_clinic_staff_rls.py  0022_fix_doctor_patient_assignments_self_insert_rls.py  0023_fix_receptionist_patient_approval_rls.py  0024_patient_otp_channel_verification.py  0025_patient_scale_assignments_disease_id.py  0026_clinical_assistant_patient_approval_rls.py  (+4 more)
backend/app/: config.py  main.py
backend/app/core/: cognito.py  db.py  (+10 more)
backend/scripts/: bootstrap_superadmin_cognito.py  seed_dev_profile.py  seed_prs_clinical_content.py  seed_test_prs_content.py  wipe_all_accounts.py
(+189 files in other folders)
